# packaging-use-docker

./: CMakeLists.txt  README  rpm.spec.in  setup.py
deb/: CMakeLists.txt
deb/init/: Dockerfile  run.in
deb/prepare/: Dockerfile  run.in
deb/test/: Dockerfile.in  run.in
python/: CMakeLists.txt  Make.mm
python/dsm/: Make.mm
srpm/: CMakeLists.txt
srpm/init/: Dockerfile  run.in
srpm/prepare/: Dockerfile  run.in
srpm/rpms/: Dockerfile.in  run.in
srpm/test/: Dockerfile.in  run.in  upload.in
srpm/test-rpm/: Dockerfile.in  run.in
